@@ -11856,6 +11856,10 @@ boost/libs/wave/samples/list_includes/list_includes_version.hpp svneol=native#te
 boost/libs/wave/samples/quick_start/build/Jamfile svneol=native#text/plain
 boost/libs/wave/samples/quick_start/build/Jamfile.v2 svneol=native#text/plain
 boost/libs/wave/samples/quick_start/quick_start.cpp svneol=native#text/plain
+boost/libs/wave/samples/real_positions/build/Jamfile svneol=native#text/plain
+boost/libs/wave/samples/real_positions/build/Jamfile.v2 svneol=native#text/plain
+boost/libs/wave/samples/real_positions/correct_token_positions.hpp svneol=native#text/plain
+boost/libs/wave/samples/real_positions/real_positions.cpp svneol=native#text/plain
 boost/libs/wave/samples/waveidl/build/Jamfile svneol=native#text/plain
 boost/libs/wave/samples/waveidl/build/Jamfile.v2 svneol=native#text/plain
 boost/libs/wave/samples/waveidl/idl.cpp svneol=native#text/plain
