@@ -14,4 +14,5 @@ build-project list_includes/build ;
 build-project quick_start/build ;
 build-project waveidl/build ;
 build-project hannibal/build ;
+build-project real_positions/build ;
 
