@@ -1,0 +1,25 @@
+# Boost.Wave: A Standard compliant C++ preprocessor library
+#
+# Boost Wave Library Sample Build Jamfile (real_positions)
+#
+# http://www.boost.org/
+#
+# Copyright (c) 2001-2006 Hartmut Kaiser. Distributed under the Boost 
+# Software License, Version 1.0. (See accompanying file 
+# LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
+
+subproject libs/wave/samples/real_positions/build ;
+
+exe real_positions
+    : ../real_positions.cpp 
+      <lib>../../../build/boost_wave
+      <lib>../../../../../libs/filesystem/build/boost_filesystem
+    :
+      <sysinclude>$(BOOST_ROOT)
+      <vc-7_1><*><rtti>off        # workaround for compiler bug
+      <vc-7_1-stlport><*><rtti>off
+    :
+      <runtime-link>static
+      <threading>single
+    ;
+
